crates/meilisearch/tests/settings/snapshots/vectors.rs/bad_parameters_2/huggingFace-distribution-task_result.snap
---
source: crates/meilisearch/tests/settings/vectors.rs
---
{
  "uid": "[uid]",
  "batchUid": "[batchUid]",
  "indexUid": "test",
  "status": "succeeded",
  "type": "settingsUpdate",
  "canceledBy": null,
  "details": {
    "embedders": {
      "test": {
        "source": "huggingFace",
        "distribution": {
          "mean": 0.4,
          "sigma": 0.1
        }
      }
    }
  },
  "error": null,
  "duration": "[duration]",
  "enqueuedAt": "[enqueuedAt]",
  "startedAt": "[startedAt]",
  "finishedAt": "[finishedAt]"
}
